@@ -6,8 +6,11 @@ import java.awt.geom.AffineTransform;
 import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
 
+import edu.colorado.phet.common.phetcommon.math.Point3D;
+
 /**
  * ModelViewTransform provides the transforms between model and view coordinate systems.
+ * In both coordinate systems, +x is to the right, +y is down, +z is towards the viewer.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
@@ -19,7 +22,7 @@ public class ModelViewTransform {
     
     private final AffineTransform modelToViewTransform;
     private final AffineTransform viewToModelTransform;
-    private final boolean flipSignX, flipSignY;
+    private final double pitch, yaw;
     
     //----------------------------------------------------------------------------
     // Constructors
@@ -30,13 +33,10 @@ public class ModelViewTransform {
      * 
      * @param scale scale for mapping from model to view (x and y scale are identical)
      * @param offset translation for mapping from model to view
-     * @param flipSignX if true, flip the sign on the x component
-     * @param flipSignY if true, flip the sign on the y component
+     * @param pitch rotation about the horizontal (x) axis
+     * @param yaw rotation about the vertical (y) axis
      */
-    public ModelViewTransform( double scale, Point2D offset, boolean flipSignX, boolean flipSignY ) {
-        
-        this.flipSignX = flipSignX;
-        this.flipSignY = flipSignY;
+    public ModelViewTransform( double scale, Point2D offset, double pitch, double yaw ) {
         
         modelToViewTransform = new AffineTransform();
         modelToViewTransform.scale( scale, scale );
@@ -45,10 +45,9 @@ public class ModelViewTransform {
         viewToModelTransform = new AffineTransform();
         viewToModelTransform.translate( -offset.getX(), -offset.getY() );
         viewToModelTransform.scale( 1d / scale, 1d / scale );
-    }
-    
-    public ModelViewTransform( double scale, Point2D offset ) {
-        this( scale, offset, false /* flipSignX */, false /* flipSignY */ );
+        
+        this.pitch = pitch;
+        this.yaw = yaw;
     }
     
     //----------------------------------------------------------------------------
@@ -64,7 +63,7 @@ public class ModelViewTransform {
     }
     
     /**
-     * Maps a point from model to view coordinates.
+     * Maps a 2D point from model to view coordinates.
      * If pView is not null, the result is returned in pView.
      * 
      * @param pModel point in model coordinates
@@ -72,14 +71,7 @@ public class ModelViewTransform {
      * @return point in view coordinates
      */
     public Point2D modelToView( Point2D pModel, Point2D pView ) {
-        Point2D p = modelToViewTransform.transform( pModel, pView );
-        if ( flipSignX ) {
-            p.setLocation( -p.getX(), p.getY() );
-        }
-        if ( flipSignY ) {
-            p.setLocation( p.getX(), -p.getY() );
-        }
-        return p;
+        return modelToViewTransform.transform( pModel, pView );
     }
     
     public Point2D modelToView( Point2D pModel ) {
@@ -95,20 +87,25 @@ public class ModelViewTransform {
     }
     
     /**
+     * Maps a point in 3D model space to a point in 2D view space.
+     * @param pModel
+     * @param pView
+     * @return
+     */
+    public Point2D modelToView( Point3D pModel ) {
+        double xModel = pModel.getX() + ( pModel.getZ() * Math.sin( pitch ) * Math.cos( yaw ) );
+        double yModel = pModel.getY() + ( pModel.getZ() * Math.sin( pitch ) * Math.sin( yaw ) );
+        return modelToView( xModel, yModel );
+    }
+    
+    /**
      * Maps a rectangle from model to view coordinates.
      * 
      * @param rModel
      * @return Rectangle2D in view coordinates
      */
     public Rectangle2D modelToView( Rectangle2D rModel ) {
-        Rectangle2D r = modelToViewTransform.createTransformedShape( rModel ).getBounds2D();
-        if ( flipSignX ) {
-            r.setRect( -r.getX(), r.getY(), r.getWidth(), r.getHeight() );
-        }
-        if ( flipSignY ) {
-            r.setRect( r.getX(), -r.getY(), r.getWidth(), r.getHeight() );
-        }
-        return r;
+        return modelToViewTransform.createTransformedShape( rModel ).getBounds2D();
     }
     
     //----------------------------------------------------------------------------
@@ -132,14 +129,7 @@ public class ModelViewTransform {
      * @return point in model coordinates
      */
     public Point2D viewToModel( Point2D pView, Point2D pModel ) {
-        Point2D p = viewToModelTransform.transform( pView, pModel );
-        if ( flipSignX ) {
-            p.setLocation( -p.getX(), p.getY() );
-        }
-        if ( flipSignY ) {
-            p.setLocation( p.getX(), -p.getY() );
-        }
-        return p;
+        return viewToModelTransform.transform( pView, pModel );
     }
     
     public Point2D viewToModel( Point2D pView ) {
@@ -161,13 +151,6 @@ public class ModelViewTransform {
      * @param Rectangle2D in model coordinates
      */
     public Rectangle2D viewToModel( Rectangle2D rView ) {
-        Rectangle2D r = viewToModelTransform.createTransformedShape( rView ).getBounds2D();
-        if ( flipSignX ) {
-            r.setRect( -r.getX(), r.getY(), r.getWidth(), r.getHeight() );
-        }
-        if ( flipSignY ) {
-            r.setRect( r.getX(), -r.getY(), r.getWidth(), r.getHeight() );
-        }
-        return r;
+        return viewToModelTransform.createTransformedShape( rView ).getBounds2D();
     }
 }
